checking in the .fx package. I moved the example stuff out to a new project
git-svn-id: http://gwittir.googlecode.com/svn/trunk@75 d620f1b1-8330-0410-a80d-d7860aac830e